hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php.expectf
*** Testing parse_url() : usage variations ***
Error: 8 - Undefined variable: undefined_var, %s(61)
Error: 8 - Undefined variable: unset_var, %s(64)

Arg value 10.5
Error: 2 - parse_url(): Invalid URL component identifier 10, %s(71)
bool(false)

Arg value -10.5
array(8) {
  ["scheme"]=>
  string(4) "http"
  ["host"]=>
  string(11) "www.php.net"
  ["port"]=>
  int(80)
  ["user"]=>
  string(6) "secret"
  ["pass"]=>
  string(7) "hideout"
  ["path"]=>
  string(10) "/index.php"
  ["query"]=>
  string(31) "test=1&test2=char&test3=mixesCI"
  ["fragment"]=>
  string(16) "some_page_ref123"
}

Arg value 101234567000
Error: 2 - parse_url(): Invalid URL component identifier %d, %s(71)
bool(false)

Arg value 1.07654321E-9
string(4) "http"

Arg value 0.5
string(4) "http"
Error: 8 - Array to string conversion, %sparse_url_variation_002_64bit.php(%d)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %sparse_url_variation_002_64bit.php(%d)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %sparse_url_variation_002_64bit.php(%d)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %sparse_url_variation_002_64bit.php(%d)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %sparse_url_variation_002_64bit.php(%d)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 
string(4) "http"

Arg value 
string(4) "http"

Arg value 1
string(11) "www.php.net"

Arg value 
string(4) "http"

Arg value 1
string(11) "www.php.net"

Arg value 
string(4) "http"

Arg value 

Warning: parse_url() expects parameter 2 to be integer, string given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, string given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value string

Warning: parse_url() expects parameter 2 to be integer, string given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value string

Warning: parse_url() expects parameter 2 to be integer, string given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 4096 - Object of class stdClass could not be converted to string, %s(70)

Arg value 

Warning: parse_url() expects parameter 2 to be integer, object given in %s/hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 
string(4) "http"

Arg value 
string(4) "http"
Done
